2011-02-21  Ingo Renner  <ingo.renner@dkd.de>

	* Added file meta data fields to schema.xml
	* Changed the flash message for failed connections in the index report to show the server connection's parameters
	* Changed the schema status check to check for the current schema version
	* Added a configuration check status
	* Changed the Solr status check to only show the complete version number, if it is different from the short version number, this is the case with custom builds
	* Added a PHP port of the Acccess Rootline
	* Added refactored facet renderer architecture to allow custom facet renderers
	* Added support for multi / single value field auto-detection in field processors
	* Added refactored structure for query filter parsers and query modifiers
	* Added support for subpart viewhelpers
	* Added a facet subpart viewhelper to render single facets independently from the regular facet list
	* Added class tx_solr_Typo3Environment to check against several TYPO3 environment conditions the extension depends on
	* Added tx_solr_Typo3PageContentExtractor::getTagContent()
	* Fixed issue #7362: nbsp are not detected to split words

2011-01-31  Stefan Sprenger  <stefan.sprenger@dkd.de>

	* Removed preset font family
	* Removed rounded corners from the autocomplete box

2011-01-28  Stefan Sprenger  <stefan.sprenger@dkd.de>

	* Updated jQuery UI to 1.8.9
	* Refactored provided jQuery UI JavaScript files and stylesheets

2011-01-26  Markus Goldbach  <markus.goldbach@dkd.de>

	* Changed schema, remove the ISOLatin mapping from the schema after problems with umlauts

2011-01-26  Stefan Sprenger  <stefan.sprenger@dkd.de>

	* Fixed bug #10668: Queries that don't return any results cause rendering of JavaScript code inside of the suggestion box

2011-01-20  Markus Goldbach  <markus.goldbach@dkd.de>

	* Fixed issue where xclass declaration of tslib_cObj produce fatal php errors in backend mode.

2010-11-29  Markus Goldbach <markus.goldbach@dkd.de>
