@@ -1,3 +1,7 @@
+2011-02-22  Ingo Renner  <ingo.renner@dkd.de>
+
+	* Added tx_solr_AdditionalFieldsIndexer to take care of indexing fields as defined in plugin.tx_solr.index.additionalFields
+
 2011-02-21  Ingo Renner  <ingo.renner@dkd.de>
 
 	* Added file meta data fields to schema.xml
